windows version detection now included in gate.bat